Bug 149654 - FILEOPEN: DOCX: Incorrect string in content control
Summary: FILEOPEN: DOCX: Incorrect string in content control
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-06-21 10:52 UTC by Xisco Faulí
Modified: 2022-09-26 17:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 7.4 (439.26 KB, image/png)
2022-06-21 10:52 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-06-21 10:52:49 UTC
Created attachment 180867 [details]
Comparsion MSO vs LibreOffice 7.4

Steps to reproduce:
1. Open attachment 40859 [details] from bug 32170

-> Content control should be 'DR 10-0048'. it's '10-0048' instead. See comparison

Reproduced in

Version: 7.4.0.0.beta1+ / LibreOffice Community
Build ID: 6ab56a4fc946f6294513f23a3ea47aa0aa154b7d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: tr-TR (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-06-21 10:53:35 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2022-05-30 09:00:25 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2022-05-30 09:36:51 +0200
commit 5ee8670f18cb8b1913a23d04590d6a31ac9730de (patch)
tree cc3475b36e991362e9633021aa9a09457c3a7558
parent 43458f83f29067752cfb3df2ccfe0eeb940f4b71 (diff)
sw content controls, date: add DOCX import

Bisected with: bibisect-linux64-7.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2022-06-28 07:33:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bab023ce3b584e815067a207adc7a8aca1f964af

tdf#149654 sw content controls: fix missing string before inline SDT from DOCX

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-06-28 08:43:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/a083ff62b52437e810a183ab162e0f895fa81cac

tdf#149654 sw content controls: fix missing string before inline SDT from DOCX

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.